<resources>
    <string name="app_name">Space Traders</string>
    <string name="pilot_point">Pilot Point :</string>
    <string name="engi_point">Engineer Point :</string>
    <string name="trade_point">Trade Point :</string>
    <string name="fighter_point">Fighter Point :</string>
    <string name="name">Name :</string>
    <string name="enter">Enter name</string>
    <string name="credit">Credit : </string>
    <string name="point">Enter points</string>
    <string name="creditAmount">1000</string>
    <string name="next">Next</string>
    <string name="ShipNext">Click next to play the game</string>
    <string name="difficulty">Difficulty :</string>
    <string name="instruc" />
    <string name="skill">Skill Points : </string>
    <string name="maxSkill">16</string>
    <string name="printuniverse">PrintUniverse</string>
    <string name="exit">EXIT</string>
    <string name="this_is_a_popup_window">This is a popup window.</string>
    <string name="welcome">Welcome!</string>
    <string name="new_game">NEW GAME</string>
    <string name="about">ABOUT</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="resume">Resume</string>
    <string name="welcome_to_planet_market">Welcome to planet market!</string>
    <string name="buy">BUY</string>
    <string name="sell">SELL</string>
    <string-array name="difficulty1">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Impossible</item>
    </string-array>

</resources>
