<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="76dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="17dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/pilotPoint"
        app:layout_constraintEnd_toStartOf="@+id/name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/pilotPoint"
        android:layout_width="118dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="250dp"
        android:text="@string/pilot_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/engineerPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <TextView
        android:id="@+id/engineerPoint"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="216dp"
        android:text="@string/engi_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tradePoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilotPoint" />

    <TextView
        android:id="@+id/tradePoint"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="216dp"
        android:text="@string/trade_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/fighterPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/engineerPoint" />

    <TextView
        android:id="@+id/fighterPoint"
        android:layout_width="152dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="294dp"
        android:text="@string/fighter_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tradePoint" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:autofillHints="@string/enter"
        android:labelFor="@id/name_input"
        app:layout_constraintBottom_toTopOf="@+id/pilotPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="264dp"
        android:text="@string/credit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterPoint" />

    <EditText
        android:id="@+id/pilot_point"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:autofillHints="@string/point"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/pilot_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/engineerPoint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toEndOf="@+id/pilotPoint"
        app:layout_constraintTop_toBottomOf="@+id/name_input"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/engineer_point"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="353dp"
        android:autofillHints="@string/point"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/engineer_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/engineerPoint"
        app:layout_constraintTop_toBottomOf="@+id/pilot_point" />

    <EditText
        android:id="@+id/credit_point"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="265dp"
        android:autofillHints="@string/point"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/creditAmount"
        android:labelFor="@id/credit_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fighterPoint"
        app:layout_constraintTop_toBottomOf="@+id/trade_point" />

    <EditText
        android:id="@+id/trade_point"
        android:layout_width="112dp"
        android:layout_height="44dp"
        android:layout_marginStart="69dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="309dp"
        android:autofillHints="@string/point"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/trade_point"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tradePoint"
        app:layout_constraintTop_toBottomOf="@+id/engineer_point" />

    <Button
        android:id="@+id/ShipSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="186dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="57dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fighterPoint" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="13dp"
        android:text="@string/ShipNext"
        app:layout_constraintBottom_toTopOf="@+id/ShipSelect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/credit_point" />

</android.support.constraint.ConstraintLayout>