<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starsback"
    android:padding="20dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".views.StartGameActivity">

    <RelativeLayout
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="25dp"
        android:background="@color/transparent_neon">

        <TextView
            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/display_name"
            android:text="Name"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

    <!--pilot field-->
    <RelativeLayout
        android:id="@+id/pilot_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/name_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/transparent_neon">

        <TextView
            android:id="@+id/display_pilot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/pilot_point"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/p_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/display_pilot"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/engineer_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/pilot_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/transparent_neon">

        <TextView
            android:id="@+id/display_engineer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/engi_point"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/e_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/display_enginner"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </RelativeLayout>

    <!--trade field-->
    <RelativeLayout
        android:id="@+id/trade_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/engineer_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/transparent_neon">

        <TextView
            android:id="@+id/display_trade"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/trade_point"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/t_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/display_trade"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20sp" />


    </RelativeLayout>

    <!--fighter field-->
    <RelativeLayout
        android:id="@+id/fighter_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/trade_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:background="@color/transparent_neon">

        <TextView
            android:id="@+id/display_fighter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:padding="8dp"
            android:text="@string/fighter_point"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/f_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/display_fighter"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="200dp"
            android:text="0"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp">

        <Button
            android:id="@+id/market"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#51C7F2"
            android:text="Market"
            android:onClick="onMarket"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/travel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/market"
            android:onClick="onTravel"
            android:background="#51C7F2"
            android:text="Travel"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/navigationView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginStart="0dp"-->
        <!--android:layout_marginEnd="0dp"-->
        <!--android:background="?android:attr/windowBackground"-->
        <!--app:itemBackground="@color/transparent_neon"-->
        <!--app:itemTextColor="@color/colorPrimaryDark"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:menu="@menu/navigation" />-->


</RelativeLayout>
